# charlotte_knowledge_graph_generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  TODOS.md  pyproject.toml
.claude/: settings.json
docs/designs/: readwise-source-mode.md
src/charlotte_knowledge_graph_generator/: __init__.py  api.py  cache.py  config.py  core.py  graph_service.py  llm.py  models.py  prompts.py  search.py  sources.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_cache.py  test_graph_service.py  test_llm.py  test_models.py  test_readwise.py  test_search.py  test_sources.py
tests/fixtures/: israel_palestine_graph.json  node_detail_oslo_accords.json
